[package]
name = "async-executor"
version = "0.1.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async executor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-executor"
homepage = "https://github.com/stjepang/async-executor"
documentation = "https://docs.rs/async-executor"
keywords = ["asynchronous", "executor", "single", "multi", "spawn"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = ["async-io"]

[dependencies]
futures-lite = "0.1.9"
multitask = { git = "https://github.com/stjepang/multitask.git", branch = "experiment" }
parking = "1.0.5"
scoped-tls = "1.0.0"
waker-fn = "1.0.0"
easy-parallel = "3.1.0"

# Optional optimization: executor waits on I/O when idle.
[dependencies.async-io]
path = "../async-io"
optional = true

[dev-dependencies]
async-channel = "1.1.1"
easy-parallel = "3.1.0"
